--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,10 +1,17 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", "**/*spec.ts"],
+  "exclude": ["node_modules", "test", "**/*spec.ts", "**/*.test.ts"],
   "include": ["src/**/*"],
   "compilerOptions": {
     "outDir": "./dist",
     "removeComments": true,
-    "declaration": false
+    "declaration": false,
+    "sourceMap": true,
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
